# nosql-generic

./: .gitignore  LICENSE  README.md  nosql-generic.cabal  stack.yaml
src/Data/Gogol/: DatastoreEntity.hs  DatastoreInstances.hs
test/: Main.hs
test/Data/Gogol/: DatastoreEntityTests.hs
